# Plane

./: .gitmodules
ground-control/: Cargo.toml
ground-control-android/: Cargo.toml  mobile.toml
ground-control-android/src/: lib.rs
ground-control/src/: lib.rs  main.rs
plane-std/: Cargo.toml  bindings.h  cfg.toml  sdkconfig.defaults
plane-std/src/: main.rs  wifi.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
