[package]
name = "ground-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.27.2"
eframe = "0.27.2"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
log = "0.4.6"
env_logger = "0.11.3"
protocol = { path = "../protocol"}
bytemuck = "1.15.0"
image = "0.24.0"
anyhow = "1.0.82"
turbojpeg = { version = "1.1.0", features = ["image"] }
stick = "0.13.0"
