[package]
name = "plane-std"
version = "0.1.0"
authors = ["Michał Opanowicz <michal.opanowicz@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
protocol = { path = "../protocol" }
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = true }
esp-idf-sys = "0.34"
esp-idf-hal = "0.43.1"
anyhow = "1.0.82"
toml-cfg = "0.1.3"
bytemuck = "1.15.0"
lsm6dso = { git = "https://github.com/cameronkinsella/lsm6dso.git" }

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = "component/esp32-camera"
bindings_header = "bindings.h"
bindings_module = "camera"

[build-dependencies]
embuild = "0.31.3"
